<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a0xb4dc0d3.gunify.Activities.ActivityAdd"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_model" />

    <EditText
        android:id="@+id/etxt_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etxt_model_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_category" />

    <RadioGroup
        android:id="@+id/rg_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_category1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_category1" />

        <RadioButton
            android:id="@+id/rb_category2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_category2" />

        <RadioButton
            android:id="@+id/rb_category3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_category3" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_price" />

    <EditText
        android:id="@+id/etxt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/etxt_price_hint"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add" />
</LinearLayout>
